# Intro_Python_HW

./: README.md  pyproject.toml  tutorial.ipynb
newcoach/: __about__.py  __init__.py  analysis.py  plotting.py
newcoach/Dataset/: New_Coach_Effect.csv
