[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newcoach"
version= "0.1.0"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Yiming Zang", email = "yiming.zang@tu-dortmund.de" },
]

classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  'pandas>=1.5',
  'numpy>=1.23',
  'statsmodels>=0.14',
  'matplotlib>=3.6'
]

[project.urls]
Documentation = "https://github.com/0xtootoo/newcoach#readme"
Issues = "https://github.com/0xtootoo/newcoach/issues"
Source = "https://github.com/0xtootoo/newcoach"


[tool.hatch.build.targets.wheel]
packages = ["newcoach"]
include = [
  "newcoach/Dataset/*.csv",
]

[tool.hatch.build.targets.sdist]
include = [
  "newcoach/**",
  "README.md",
  "LICENSE.txt",
]
